# haveit-in.github.io

./: .gitignore  README.md  index.html  render.yaml
backend/: .env.example  .env.local  .gitignore  ORDER_MANAGEMENT_TESTING_GUIDE.md  add_profile_completed.sql  alembic.ini  create_order_indexes.py  create_orders_table.sql  create_payments_table.py  create_tables.py  order_management_tests.postman_collection.json  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_create_orders_table.py  8457d4e40c61_fix_user_role_column.py  93fb96c7f863_upgrade_orders_architecture_with_order_.py  a19115cbcc1f_create_cart_and_cart_items_tables.py  add_onboarding_fields_to_restaurant.py  create_payments_table.py  d107e8031619_merge_onboarding_heads.py  eabcd7782b04_create_payments_table.py  f8e7d6c5b4a3_repair_orders_columns_if_missing.py
backend/app/: auth.py  config.py  database.py  dependencies.py  firebase.py  logging_config.py  main.py  schemas.py
backend/app/middleware/: rate_limit.py  validation.py
backend/app/models/: __init__.py  cart.py  menu_category.py  menu_item.py  order.py  order_item.py  order_tracking.py  payment.py  restaurant.py  user.py
backend/app/routers/: admin.py  restaurant.py
backend/app/routes/: __init__.py  cart.py  menu.py  orders.py  payments.py  restaurant_orders.py
backend/app/schemas/: __init__.py  auth.py  cart.py  menu.py  order.py  payment.py
backend/app/utils/: logger.py  (+4 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_app.py  test_jwt.py
(+130 files in other folders)
